@@ -1,3 +1,8 @@
+November 4, 2009 Wei Mingzhi <weimingzhi@gmail.com>
+
+ * libpcsxcore/sio.c: Fixed the format of new memord card file, which solves
+   the saving problem with Final Fantasy 6.
+
 November 3, 2009 Wei Mingzhi <weimingzhi@gmail.com>
 
  * macosx/plugins/HIDInput/src/PlugPAD.c: Implemented PADstartPoll() and
